--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
 
-<div class="butnfon">Виктория
+<div class="butnfon">
+  <button class="btn btn-primary" id="butn0">&nbspВиктория&nbsp</button>
   <button class="btn btn-primary" id="butn1">&nbspФон&nbsp1&nbsp</button>
   <button class="btn btn-primary" id="butn2">&nbspФон&nbsp2&nbsp</button>
   <button class="btn btn-primary" id="butn3">&nbspФон&nbsp3&nbsp</button>
