--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-<div class="butnfon">
+<div class="butnfon" id="butnfon">
   <button class="btn btn-primary" id="butn0">&nbspВиктория&nbsp</button>
   <button class="btn btn-primary" id="butn1">&nbspФон&nbsp1&nbsp</button>
   <button class="btn btn-primary" id="butn2">&nbspФон&nbsp2&nbsp</button>
@@ -29,11 +29,17 @@
   <button class="btn btn-primary" id="butn10">&nbspФон&nbsp10&nbsp</button>
 </div>
 
-<div class="victor">
+<div class="victor" id="victor">
   <iframe width="670" height="220" frameborder="1"src="victoria.html"
   title="Читаем" frameborder="0" allowfullscreen></iframe>
 </div>  
 
+<div class="victor1">
+  <button onclick="show_hide()">&nbspОписание&nbsp</button>
+  <button onclick="show_hide2()">&nbspПлейер&nbsp</button>
+  <button onclick="show_hide3()">&nbspФоны&nbsp</button>
+</div>
+  
 <div class="menu">
 <div class="list_menu">
 <ul>
@@ -146,7 +152,7 @@
 </div>
 </div>
 
-     <div class="container">
+     <div class="container" id="container">
       <div id="zaonpp">ЗАО НПП "АТС"</div>     
       <!--============Player Content -->
       <h2 id="music_title">Capital Letters</h2>
@@ -168,7 +174,11 @@
     </div>
 
   <script defer src="playmus.js"></script>
-  <script src="backgr.js"></script>      
+  <script src="backgr.js"></script>  
+  <script src="vklvikl.js"></script>  
+  <script src="vklvikl2.js"></script>  
+  <script src="vklvikl3.js"></script>  
+  
   <!-- <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
