--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="viezdmnur.css" />    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- <link rel="stylesheet" href="all.min.css"> -->
-    <title>Аудиоплейер 3</title>
+    <title>Плейер 3 Виктория</title>
     <link rel="icon" type="Images/x-icon" href="atsicon.ico"/>
   </head>
   <body>
@@ -29,15 +29,33 @@
   <button class="btn btn-primary" id="butn10">&nbspФон&nbsp10&nbsp</button>
 </div>
 
-<div class="victor" id="victor">
+<!-- <div class="victor" id="victor">
   <iframe width="670" height="220" frameborder="1"src="victoria.html"
   title="Читаем" frameborder="0" allowfullscreen></iframe>
-</div>  
+</div>   -->
+
+<div class="containerop" id="containerop">
+  <p>Водопад на реке Замбези в Южной Африке. Расположен на границе Замбии и Зимбабве. 
+Ширина водопада - 1800 метров, высота - 120 метров. Расход воды сильно меняется по сезонам, 
+средний - около 1400 м³/с. Виктория - единственный водопад в мире, одновременно имеющий 
+более 100 метров в высоту и более километра в ширину.
+Первым европейцем, увидевшим водопад, стал шотландский исследователь-путешественник Дэвид 
+Ливингстон. 17 ноября 1855 года, во время путешествия от верховьев Замбези к устью реки (1852—1856), 
+Ливингстон достиг водопада и подплыл к маленькому острову, который впоследствии был назван его именем. 
+Проплыв далее вниз по течению, он увидел более внушительный водопад и назвал его в честь королевы 
+Виктории. На языке лози (коренного населения этих мест) водопад был известен как Моси-оа-Тунья 
+(Mosi-oa-Tunya) — «гремящий дым».
+Водопад Виктория является одной из главных достопримечательностей Южной Африки, относится к 
+Всемирному наследию ЮНЕСКО. Входит в состав двух национальных парков — Моси-оа-Тунья 
+в Замбии и Виктория-Фолс в Зимбабве. 
+  </p>
+</div>
 
 <div class="victor1">
   <button onclick="show_hide()">&nbspОписание&nbsp</button>
   <button onclick="show_hide2()">&nbspПлейер&nbsp</button>
   <button onclick="show_hide3()">&nbspФоны&nbsp</button>
+  <button id="makefon">&nbspФон для чтения&nbsp</button>
 </div>
   
 <div class="menu">
@@ -178,6 +196,7 @@
   <script src="vklvikl.js"></script>  
   <script src="vklvikl2.js"></script>  
   <script src="vklvikl3.js"></script>  
+  <script src="vklvikl4.js"></script>  
   
   <!-- <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
