--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" /> -->
+      <link rel="stylesheet" href="spop.min.css" />
       <link rel="stylesheet" href="playmus.css" />
       <link rel="stylesheet" href="viezdmnu.css" />    
       <link rel="stylesheet" href="viezdmnur.css" />    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- <link rel="stylesheet" href="all.min.css"> -->
     <title>Плейер 3 Виктория</title>
-    <link rel="icon" type="Images/x-icon" href="atsicon.ico"/>
+    <link rel="icon" type="images/x-icon" href="atsiconrb.ico"/>
   </head>
   <body>
 
@@ -29,10 +30,7 @@
   <button class="btn btn-primary" id="butn10">&nbspФон&nbsp10&nbsp</button>
 </div>
 
-<!-- <div class="victor" id="victor">
-  <iframe width="670" height="220" frameborder="1"src="victoria.html"
-  title="Читаем" frameborder="0" allowfullscreen></iframe>
-</div>   -->
+<button id="otklvse" onclick="show_hide5()">&nbspВключить/Отключить меню&nbsp</button>
 
 <div class="containerop" id="containerop">
   <p>Водопад на реке Замбези в Южной Африке. Расположен на границе Замбии и Зимбабве. 
@@ -40,18 +38,18 @@
 средний - около 1400 м³/с. Виктория - единственный водопад в мире, одновременно имеющий 
 более 100 метров в высоту и более километра в ширину.
 Первым европейцем, увидевшим водопад, стал шотландский исследователь-путешественник Дэвид 
-Ливингстон. 17 ноября 1855 года, во время путешествия от верховьев Замбези к устью реки (1852—1856), 
+Ливингстон. 17 ноября 1855 года, во время путешествия от верховьев Замбези к устью реки (1852-1856), 
 Ливингстон достиг водопада и подплыл к маленькому острову, который впоследствии был назван его именем. 
 Проплыв далее вниз по течению, он увидел более внушительный водопад и назвал его в честь королевы 
 Виктории. На языке лози (коренного населения этих мест) водопад был известен как Моси-оа-Тунья 
 (Mosi-oa-Tunya) — «гремящий дым».
 Водопад Виктория является одной из главных достопримечательностей Южной Африки, относится к 
-Всемирному наследию ЮНЕСКО. Входит в состав двух национальных парков — Моси-оа-Тунья 
+всемирному наследию ЮНЕСКО. Входит в состав двух национальных парков — Моси-оа-Тунья 
 в Замбии и Виктория-Фолс в Зимбабве. 
   </p>
 </div>
 
-<div class="victor1">
+<div class="victor1" id="victor1">
   <button onclick="show_hide()">&nbspОписание&nbsp</button>
   <button onclick="show_hide2()">&nbspПлейер&nbsp</button>
   <button onclick="show_hide3()">&nbspФоны&nbsp</button>
@@ -197,6 +195,10 @@
   <script src="vklvikl2.js"></script>  
   <script src="vklvikl3.js"></script>  
   <script src="vklvikl4.js"></script>  
+  <script src="vklvikl5.js"></script>  
+
+<script src="spop.min.js"></script>  
+<script src="spopdob.js"></script>  
   
   <!-- <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
