sec6mus3 commit

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       <link rel="stylesheet" href="playmus.css" />
       <link rel="stylesheet" href="viezdmnu.css" />    
       <link rel="stylesheet" href="viezdmnur.css" />    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <!-- <link rel="stylesheet" href="all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    <!-- <link rel="stylesheet" href="all.min.css"> -->
     <title>Плейер 3 Виктория</title>
     <link rel="icon" type="images/x-icon" href="atsiconrb.ico"/>
   </head>
@@ -192,11 +191,7 @@
   <script defer src="playmus.js"></script>
   <script src="backgr.js"></script>  
   <script src="vklvikl.js"></script>  
-  <script src="vklvikl2.js"></script>  
-  <script src="vklvikl3.js"></script>  
-  <script src="vklvikl4.js"></script>  
-  <script src="vklvikl5.js"></script>  
-
+  
 <script src="spop.min.js"></script>  
 <script src="spopdob.js"></script>  
   
