--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" /> -->
+      <link rel="stylesheet" href="progressive-image.css" />
       <link rel="stylesheet" href="spop.min.css" />
       <link rel="stylesheet" href="playmus.css" />
+      <link rel="stylesheet" href="playmusk.css" />
       <link rel="stylesheet" href="viezdmnu.css" />    
       <link rel="stylesheet" href="viezdmnur.css" />    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    <!-- <link rel="stylesheet" href="all.min.css"> -->
@@ -16,18 +18,30 @@
   <body>
 
 <div class="butnfon" id="butnfon">
-  <button class="btn btn-primary" id="butn0">&nbspВиктория&nbsp</button>
-  <button class="btn btn-primary" id="butn1">&nbspФон&nbsp1&nbsp</button>
-  <button class="btn btn-primary" id="butn2">&nbspФон&nbsp2&nbsp</button>
-  <button class="btn btn-primary" id="butn3">&nbspФон&nbsp3&nbsp</button>
-  <button class="btn btn-primary" id="butn4">&nbspФон&nbsp4&nbsp</button>
-  <button class="btn btn-primary" id="butn5">&nbspФон&nbsp5&nbsp</button>
-  <button class="btn btn-primary" id="butn6">&nbspФон&nbsp6&nbsp</button>
-  <button class="btn btn-primary" id="butn7">&nbspФон&nbsp7&nbsp</button>
-  <button class="btn btn-primary" id="butn8">&nbspФон&nbsp8&nbsp</button>
-  <button class="btn btn-primary" id="butn9">&nbspФон&nbsp9&nbsp</button>
-  <button class="btn btn-primary" id="butn10">&nbspФон&nbsp10&nbsp</button>
+  <button class="btn btn-primary" id="butn01">&nbspВиктория&nbsp</button>
+  <button class="btn btn-primary" id="butn02">&nbspФон&nbsp1&nbsp</button>
+  <button class="btn btn-primary" id="butn03">&nbspФон&nbsp2&nbsp</button>
+  <button class="btn btn-primary" id="butn04">&nbspФон&nbsp3&nbsp</button>
+  <button class="btn btn-primary" id="butn05">&nbspФон&nbsp4&nbsp</button>
+  <button class="btn btn-primary" id="butn06">&nbspФон&nbsp5&nbsp</button>
+  <button class="btn btn-primary" id="butn07">&nbspФон&nbsp6&nbsp</button>
+  <button class="btn btn-primary" id="butn08">&nbspФон&nbsp7&nbsp</button>
+  <button class="btn btn-primary" id="butn09">&nbspФон&nbsp8&nbsp</button>
+  <button class="btn btn-primary" id="butn10">&nbspФон&nbsp9&nbsp</button>
+  <button class="btn btn-primary" id="butn11">&nbspФон&nbsp10&nbsp</button>
 </div>
+
+<a href="back/victoria.jpg" class="progressive replace" id="prim01"><img src="back/victorim.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria0.jpg" class="progressive replace" id="prim02"><img src="back/victorim0.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria1.jpg" class="progressive replace" id="prim03"><img src="back/victorim1.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria2.jpg" class="progressive replace" id="prim04"><img src="back/victorim2.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria3.jpg" class="progressive replace" id="prim05"><img src="back/victorim3.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria4.jpg" class="progressive replace" id="prim06"><img src="back/victorim4.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria5.jpg" class="progressive replace" id="prim07"><img src="back/victorim5.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria6.jpg" class="progressive replace" id="prim08"><img src="back/victorim6.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria7.jpg" class="progressive replace" id="prim09"><img src="back/victorim7.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria8.jpg" class="progressive replace" id="prim10"><img src="back/victorim8.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria9.jpg" class="progressive replace" id="prim11"><img src="back/victorim9.jpg" class="preview" alt="Нет фото" /></a> 
 
 <button id="otklvse" onclick="show_hide5()">&nbspВключить/Отключить меню&nbsp</button>
 
@@ -41,9 +55,9 @@
 Ливингстон достиг водопада и подплыл к маленькому острову, который впоследствии был назван его именем. 
 Проплыв далее вниз по течению, он увидел более внушительный водопад и назвал его в честь королевы 
 Виктории. На языке лози (коренного населения этих мест) водопад был известен как Моси-оа-Тунья 
-(Mosi-oa-Tunya) — «гремящий дым».
+(Mosi-oa-Tunya) - «гремящий дым».
 Водопад Виктория является одной из главных достопримечательностей Южной Африки, относится к 
-всемирному наследию ЮНЕСКО. Входит в состав двух национальных парков — Моси-оа-Тунья 
+всемирному наследию ЮНЕСКО. Входит в состав двух национальных парков - Моси-оа-Тунья 
 в Замбии и Виктория-Фолс в Зимбабве. 
   </p>
 </div>
@@ -188,8 +202,10 @@
       </div>
     </div>
 
-  <script defer src="playmus.js"></script>
-  <script src="backgr.js"></script>  
+    <script src="progressive-image.js"></script>  
+    <script defer src="playmus.js"></script>
+  <!-- <script src="backgr.js"></script>   -->
+  <script src="backgrk.js"></script>  
   <script src="vklvikl.js"></script>  
   
 <script src="spop.min.js"></script>  
