--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
   <button class="btn btn-primary" id="butn07">&nbspФон&nbsp6&nbsp</button>
   <button class="btn btn-primary" id="butn08">&nbspФон&nbsp7&nbsp</button>
   <button class="btn btn-primary" id="butn09">&nbspФон&nbsp8&nbsp</button>
+</div>
+
+<div class="butnfon1" id="butnfon1">
   <button class="btn btn-primary" id="butn10">&nbspФон&nbsp9&nbsp</button>
   <button class="btn btn-primary" id="butn11">&nbspФон&nbsp10&nbsp</button>
+  <button class="btn btn-primary" id="butn12">&nbspФон&nbsp11&nbsp</button>
+  <button class="btn btn-primary" id="butn13">&nbspФон&nbsp12&nbsp</button>
+  <button class="btn btn-primary" id="butn14">&nbspФон&nbsp13&nbsp</button>
+  <button class="btn btn-primary" id="butn15">&nbspФон&nbsp14&nbsp</button>
+  <button class="btn btn-primary" id="butn16">&nbspФон&nbsp15&nbsp</button>
+  <button class="btn btn-primary" id="butn17">&nbspФон&nbsp16&nbsp</button>
+  <button class="btn btn-primary" id="butn18">&nbspФон&nbsp17&nbsp</button>
+  <button class="btn btn-primary" id="butn19">&nbspФон&nbsp18&nbsp</button>
 </div>
 
 <a href="back/victoria.jpg" class="progressive replace" id="prim01"><img src="back/victorim.jpg" class="preview" alt="Нет фото" /></a> 
@@ -42,6 +53,15 @@
 <a href="back/victoria7.jpg" class="progressive replace" id="prim09"><img src="back/victorim7.jpg" class="preview" alt="Нет фото" /></a> 
 <a href="back/victoria8.jpg" class="progressive replace" id="prim10"><img src="back/victorim8.jpg" class="preview" alt="Нет фото" /></a> 
 <a href="back/victoria9.jpg" class="progressive replace" id="prim11"><img src="back/victorim9.jpg" class="preview" alt="Нет фото" /></a> 
+
+<a href="back/victoria10.jpg" class="progressive replace" id="prim12"><img src="back/victorim10.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria11.jpg" class="progressive replace" id="prim13"><img src="back/victorim11.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria12.jpg" class="progressive replace" id="prim14"><img src="back/victorim12.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria13.jpg" class="progressive replace" id="prim15"><img src="back/victorim13.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria14.jpg" class="progressive replace" id="prim16"><img src="back/victorim14.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria15.jpg" class="progressive replace" id="prim17"><img src="back/victorim15.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria16.jpg" class="progressive replace" id="prim18"><img src="back/victorim16.jpg" class="preview" alt="Нет фото" /></a> 
+<a href="back/victoria17.jpg" class="progressive replace" id="prim19"><img src="back/victorim17.jpg" class="preview" alt="Нет фото" /></a> 
 
 <button id="otklvse" onclick="show_hide5()">&nbspВключить/Отключить меню&nbsp</button>
 
@@ -204,8 +224,7 @@
 
     <script src="progressive-image.js"></script>  
     <script defer src="playmus.js"></script>
-  <!-- <script src="backgr.js"></script>   -->
-  <script src="backgrk.js"></script>  
+  <script src="backgr.js"></script>  
   <script src="vklvikl.js"></script>  
   
 <script src="spop.min.js"></script>  
