--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="viezdmnur.css" />    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    <!-- <link rel="stylesheet" href="all.min.css"> -->
     <title>Плеер 3 Виктория</title>
-    <link rel="icon" type="images/x-icon" href="atsiconrb.ico"/>
+    <link rel="icon" type="images/x-icon" href="atsicon.ico"/>
 </head>
 <body>
 
