--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" /> -->
+      <link rel="stylesheet" href="prokr/begstroka.css">
       <link rel="stylesheet" href="progressive-image.css" />
       <link rel="stylesheet" href="spop.min.css" />
       <link rel="stylesheet" href="playmus.css" />
       <link rel="stylesheet" href="playmusk.css" />
       <link rel="stylesheet" href="viezdmnu.css" />    
       <link rel="stylesheet" href="viezdmnur.css" />    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    <!-- <link rel="stylesheet" href="all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Плеер 3 Виктория</title>
     <link rel="icon" type="images/x-icon" href="atsicon.ico"/>
 </head>
@@ -84,6 +85,7 @@
   <button onclick="show_hide()">&nbspОписание&nbsp</button>
   <button onclick="show_hide2()">&nbspПлеер&nbsp</button>
   <button onclick="show_hide3()">&nbspФоны&nbsp</button>
+  <button onclick="show_hidestr()">&nbspСтрока&nbsp</button>
   <button id="makefon">&nbspФон для чтения&nbsp</button>
   <a href="prokrig4.html" target="_blank" title="Просмотр фото автопрокруткой"><button>Прокрутка</button></a>
 </div>
@@ -92,49 +94,49 @@
 <div class="list_menu">
 <ul>
 
-<li><span id=mus18><p>О пустяках</p>    
+<li><span id="mus318"><p>О пустяках</p>    
 <audio controls>
 <source src="music/opustakah.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
     
-<li><span id=mus5><p>Крючок</p>    
+<li><span id="mus305"><p>Крючок</p>    
 <audio controls>
 <source src="music/kruchok.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
               
-<li><span id=mus15><p>Жду кого-то</p>    
+<li><span id="mus315"><p>Жду кого-то</p>    
 <audio controls>
 <source src="music/kogoto.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus17><p>Раки</p>    
+<li><span id="mus317"><p>Раки</p>    
 <audio controls>
 <source src="music/rakihochu.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus6><p>Борода</p>    
+<li><span id="mus306"><p>Борода</p>    
 <audio controls>
 <source src="music/boroda.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus8><p>Спортлото</p>    
+<li><span id="mus308"><p>Спортлото</p>    
 <audio controls>
 <source src="music/sportloto.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus1><p>Жили мы борясь</p>    
+<li><span id="mus301"><p>Жили мы борясь</p>    
 <audio controls>
 <source src="music/boryas.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus9><p>Ленин такой молодой</p>    
+<li><span id="mus309"><p>Ленин такой молодой</p>    
 <audio controls>
 <source src="music/lenmol.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
@@ -148,49 +150,49 @@
 <div class="list_menur">
 <ul>
 
-<li><span id=mus14><p>Чудо</p>    
+<li><span id="mus314"><p>Чудо</p>    
 <audio controls>
 <source src="music/chudo.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus11><p>Представь себе</p>    
+<li><span id="mus311"><p>Представь себе</p>    
 <audio controls>
 <source src="music/predstav.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus12><p>Плот</p>    
+<li><span id="mus312"><p>Плот</p>    
 <audio controls>
 <source src="music/plot.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus13><p>Гимнастика</p>
+<li><span id="mus313"><p>Гимнастика</p>
 <audio controls>
 <source src="music/gimnastika.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus16><p>Попробуем вернуть</p>    
+<li><span id="mus316"><p>Попробуем вернуть</p>    
 <audio controls>
 <source src="music/vernut.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus3><p>Прошлым летом</p>    
+<li><span id="mus303"><p>Прошлым летом</p>    
 <audio controls>
 <source src="music/proshletom.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus4><p>Цветные сны</p>    
+<li><span id="mus304"><p>Цветные сны</p>    
 <audio controls>
 <source src="music/tsvetsni.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
 </span></li>
 
-<li><span id=mus2><p>Леди совершенство</p>    
+<li><span id="mus302"><p>Леди совершенство</p>    
 <audio controls>
 <source src="music/ledysover.mp3" type="audio/mpeg">Прослушаем музыку 1
 </audio>
@@ -200,8 +202,7 @@
 </div>
 </div>
 
-     <div class="container" id="container">
-      <div id="zaonpp">ЗАО НПП "АТС"</div>     
+     <div class="container" id="container">      <!-- <div id="zaonpp">ЗАО НПП "АТС"</div>      -->
       <h2 id="music_title">Заголовок</h2>
       <div class="player_progress" id="player_progress">
         <div class="progress" id="progress">
@@ -211,6 +212,12 @@
           </div>
         </div>
       </div>
+<span class="ticker" id="ticker">
+  <span class="ticker__wrapper">
+    <span class="ticker__item">«Жизнь имеет в точности ту ценность, которой мы хотим её наделить» Ингмар Бергман 🙎</span>
+    <span class="ticker__item">«Жизнь имеет в точности ту ценность, которой мы хотим её наделить» Ингмар Бергман 🙎</span>
+  </span>
+</span>      
       <div class="player_controls">
         <i class="fa-solid fa-backward" title="Предыдущий" id="prev"></i>
         <i class="fa-solid fa-play play-button" title="Запуск" id="play"></i>
